# oop_exercise_01

./: .gitignore  CMakeLists.txt  main.cpp  oop_exercise_01  test_01.txt  test_02.txt  test_03.txt  test_04.txt  ~$report.docx
Extra/: lab1.cpp  minilesson.cpp
